--- a/程式開發範例.md
+++ b/程式開發範例.md
@@ -1,6 +1,8 @@
 程式開發範例
 
 
+# 簡易程式開發流程指南
+
 ## 第一步：寫下想法清單 ✏️
 
 - 把你想要做的所有功能寫下來
@@ -19,7 +21,8 @@
 - 你可以決定要分成幾個步驟
 - 記住：步驟之後可以調整，不用一開始就完美
 - 範例說明：
-```
+
+```text
 請幫改這份規格書，當中要拆成7個步驟的程式說明，確保每一個步驟都可以執行，從第1個步驟慢慢增加功能到第7個步驟，這樣我才看得懂
 ```
 
@@ -27,9 +30,12 @@
 
 - 請AI按照步驟幫你寫程式
 - 記得告訴AI你喜歡什麼樣的程式風格
+- 自己建立新的程式檔案
+- 開啟空白的程式檔案
 - 範例說明：
-```
-請依照步驟1建立程式，後面的步驟先不要建立，建立在adv-05的資料夾當中，要參考 #file:prj05.py 的撰寫方式我比較容理解，請為程式標記詳細好理解的註解 
+
+```text
+請根據 #file:build.md 的內容，參照 #file:prj05.py 的撰寫方式，依步驟1撰寫程式碼，並加入詳細易懂的註解，其餘步驟暫不執行。
 ```
 
 ## 第五步：檢查與學習 🔍
@@ -39,8 +45,15 @@
 - 如果有錯誤，請AI幫忙修正
 - 不懂的地方請AI解釋
 - 如果程式太複雜難懂，可以將步驟拆分：
-```
+
+```text
 第○○步驟內容太過複雜，請幫我將這個步驟的內容再繼續分出新步驟，後續的步驟編號順延
+```
+
+- 如果沒問題，就可以做下一步了：
+
+```text
+修改目前程式，請根據 #file:build.md 的內容，參照 #file:prj05.py 的撰寫方式，執行步驟6，補上新程式詳細易懂的說明註解，確保原本的程式註解不要被更動，其餘步驟暫不執行。
 ```
 
 ## 小提醒
@@ -48,3 +61,4 @@
 - 每完成一個步驟，先確認你能理解再繼續
 - 程式越簡單越好
 - 不懂就問，不要害怕發問
+- 請記得：AI只提供程式碼，你需要自己複製檔案並命名檔案
