feat: 新增遊戲資源檔案，包括圖片與音效

--- a/程式開發範例.md
+++ b/程式開發範例.md
@@ -35,7 +35,7 @@
 - 範例說明：
 
 ```text
-請根據 #file:build.md 的內容，參照 #file:prj05.py 的撰寫方式，依步驟1撰寫程式碼，並加入詳細易懂的註解，其餘步驟暫不執行。
+請修改程式，根據   #file:spacefight.md  的內容，參照 #file:prj13.py  的撰寫方式，依步驟1撰寫程式碼，並加入詳細易懂的註解，其餘步驟暫不執行。
 ```
 
 ## 第五步：檢查與學習 🔍
